--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,7 @@
     <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/keter/" | prepend: site.baseurl }}">Keter</a>
     <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/htb/" | prepend: site.baseurl }}">HTB</a>
     <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/rootme/" | prepend: site.baseurl }}">Root Me</a>
+    <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/other/" | prepend: site.baseurl }}">Others CTF</a>
     <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/notes/" | prepend: site.baseurl }}">Notes</a>
-    <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/other/" | prepend: site.baseurl }}">Other</a>
   </div>
 </nav>
