--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="c-footer">
   <div class="u-container c-footer__container">
-    <p><br><br>By <a href="https://github.com/rokhimin/jekyll-material-saber"><font color="#fff"> {{ site.title }} </font></a> &copy; {{ site.time | date: '%Y' }}
+    <p><br><br>By <a href="#"><font color="#fff"> {{ site.title }} </font></a> &copy; {{ site.time | date: '%Y' }}
     </p>
     <p><br><br>
       {% if site.githubUsername %}<a href="https://github.com/{{ site.githubUsername }}"><font color="#fff">Github</font></a>{% endif %}
