--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,9 +2,7 @@
   <div class="c-navigation__container u-container">
     <a class="c-navigation__item {% if page.url == '/' %}is-active{% endif %}" href="{{ "/" | prepend: site.baseurl }}">Home</a>
     <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/keter/" | prepend: site.baseurl }}">Keter</a>
-    <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/htb/" | prepend: site.baseurl }}">HTB</a>
-    <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/rootme/" | prepend: site.baseurl }}">Root Me</a>
-    <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/other/" | prepend: site.baseurl }}">Others CTF</a>
+    <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/ctf/" | prepend: site.baseurl }}">CTF</a>
     <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/notes/" | prepend: site.baseurl }}">Notes</a>
   </div>
 </nav>
