--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,5 +25,9 @@
         height: 30px;
         background-color: #000;
         }
+
+        body{
+          background-color: #222222;
+        }
   </style>
 </head>
