--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav class="c-navigation {% if site.fixedNav == 'true' %}is-fixed{% endif %}">
   <div class="c-navigation__container u-container">
     <a class="c-navigation__item {% if page.url == '/' %}is-active{% endif %}" href="{{ "/" | prepend: site.baseurl }}">Home</a>
-    <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/keter/" | prepend: site.baseurl }}">Keter</a>
+    <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/projects/" | prepend: site.baseurl }}">Projects</a>
     <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/ctf/" | prepend: site.baseurl }}">CTF</a>
     <a class="c-navigation__item {% if page.url == '/projects/' %}is-active{% endif %}" href="{{ "/notes/" | prepend: site.baseurl }}">Notes</a>
   </div>
